{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 33,
  "lineage": "ee7eb89e-0885-feba-bed7-e34bbe085a86",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/networkInterfaces/lab-nic-1",
            "internal_domain_name_suffix": "pfy5udiaxv5ufhdkvx2aspyhya.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/publicIPAddresses/kali-public-ip",
                "subnet_id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/virtualNetworks/lab-vnet-1/subnets/lab-public-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-22-48-25-46-86",
            "name": "lab-nic-1",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "lab-rg-1",
            "virtual_machine_id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Compute/virtualMachines/kali"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.public_ip_kali",
            "azurerm_resource_group.rg-1",
            "azurerm_subnet.subnet-2",
            "azurerm_virtual_network.vnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/networkInterfaces/lab-nic-2",
            "internal_domain_name_suffix": "pfy5udiaxv5ufhdkvx2aspyhya.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/virtualNetworks/lab-vnet-1/subnets/lab-private-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "lab-nic-2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "lab-rg-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-1",
            "azurerm_subnet.subnet-1",
            "azurerm_virtual_network.vnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_association_kali",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/networkInterfaces/lab-nic-1|/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/networkSecurityGroups/kali-nsg",
            "network_interface_id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/networkInterfaces/lab-nic-1",
            "network_security_group_id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/networkSecurityGroups/kali-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic-1",
            "azurerm_network_security_group.nsg_kali",
            "azurerm_public_ip.public_ip_kali",
            "azurerm_resource_group.rg-1",
            "azurerm_subnet.subnet-2",
            "azurerm_virtual_network.vnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_association_ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/networkInterfaces/lab-nic-2|/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/networkSecurityGroups/nsg-ubuntu",
            "network_interface_id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/networkInterfaces/lab-nic-2",
            "network_security_group_id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/networkSecurityGroups/nsg-ubuntu"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic-2",
            "azurerm_network_security_group.nsg_ubuntu",
            "azurerm_resource_group.rg-1",
            "azurerm_subnet.subnet-1",
            "azurerm_virtual_network.vnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_kali",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/networkSecurityGroups/kali-nsg",
            "location": "eastus",
            "name": "kali-nsg",
            "resource_group_name": "lab-rg-1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "173.72.65.138",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "lab"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/networkSecurityGroups/nsg-ubuntu",
            "location": "eastus",
            "name": "nsg-ubuntu",
            "resource_group_name": "lab-rg-1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "173.72.65.138",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "lab"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip_kali",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/publicIPAddresses/kali-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.227.216.198",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "kali-public-ip",
            "resource_group_name": "lab-rg-1",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "lab"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip_ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/publicIPAddresses/ubuntu-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.169.144.93",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "ubuntu-public-ip",
            "resource_group_name": "lab-rg-1",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "lab"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/virtualNetworks/lab-vnet-1/subnets/lab-private-subnet",
            "name": "lab-private-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lab-rg-1",
            "virtual_network_name": "lab-vnet-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-1",
            "azurerm_virtual_network.vnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/virtualNetworks/lab-vnet-1/subnets/lab-public-subnet",
            "name": "lab-public-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lab-rg-1",
            "virtual_network_name": "lab-vnet-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-1",
            "azurerm_virtual_network.vnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0dfa7179-bd00-427f-9c6a-adf8093f07c0",
            "id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/virtualNetworks/lab-vnet-1",
            "location": "eastus",
            "name": "lab-vnet-1",
            "resource_group_name": "lab-rg-1",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/virtualNetworks/lab-vnet-1/subnets/lab-private-subnet",
                "name": "lab-private-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/ae31db2c-385a-4e7b-ae58-69cad61f65df/resourceGroups/lab-rg-1/providers/Microsoft.Network/virtualNetworks/lab-vnet-1/subnets/lab-public-subnet",
                "name": "lab-public-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "environment": "lab"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-1"
          ]
        }
      ]
    }
  ]
}